tests/parser/should_fail/module_with_empty_argument_list.csp
module m()
x=0
exports
y=1
endmodule
--instance im = m()
--print im::y
